Update grafana image and add loki

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,16 @@ services:
     depends_on:
       - statsd_exporter
 
+  loki:
+    image: grafana/loki:latest
+    ports:
+      - 3100:3100
+    volumes:
+      - loki_data:/loki
+    command: -config.file=/etc/loki/local-config.yaml
+
   grafana:
-    image: grafana/grafana:7.1.0
+    image: grafana/grafana:latest
     ports:
       - 3000:3000
     restart: unless-stopped
@@ -37,3 +45,4 @@ services:
 volumes:
   grafana_data:
   prometheus_data:
+  loki_data:
