--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     image: grafana/loki:latest
     ports:
       - 3100:3100
+    restart: unless-stopped
     volumes:
       - loki_data:/loki
     command: -config.file=/etc/loki/local-config.yaml
