Add grafana server root url as env variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
     ports:
       - 3000:3000
     restart: unless-stopped
+    enviroment:
+      - GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL}
     depends_on:
       - prometheus
     volumes:
