--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -10,3 +10,7 @@ scrape_configs:
   - job_name: 'statsd_exporter'
     static_configs:
       - targets: ['statsd_exporter:9102']
+
+  - job_name: node
+    static_configs:
+      - targets: ['localhost:9100']
