--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - '--web.listen-address=:9102'
 
   prometheus:
-    image: prom/prometheus:v2.20.1
+    image: prom/prometheus:latest
     volumes:
       - ./docker/prometheus:/etc/prometheus
       - prometheus_data:/prometheus
