--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -11,6 +11,10 @@ scrape_configs:
     static_configs:
       - targets: ['statsd_exporter:9102']
 
-  - job_name: node
+  - job_name: 'node'
     static_configs:
       - targets: ['localhost:9100']
+
+  - job_name: 'process'
+    static_configs:
+      - targets: ['localhost:9256']
